// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalizedPraise NoResult when no mentees 1`] = `
<section
  class="ext-growthExperiments-PersonalizedPraise"
>
  <div
    class="ext-growthExperiments-PersonalizedPraise__info-wrapper"
  >
    <p
      class="ext-growthExperiments-PersonalizedPraise__intro"
    >
      growthexperiments-mentor-dashboard-personalized-praise-intro
    </p>
    <button
      aria-label="growthexperiments-mentor-dashboard-personalized-praise-info-icon-label"
      aria-pressed="false"
      class="cdx-toggle-button cdx-toggle-button--quiet cdx-toggle-button--toggled-off cdx-toggle-button--icon-only ext-growthExperiments-PersonalizedPraise__info-button"
      type="button"
    >
      
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            info-icon
          </g>
        </svg>
      </span>
      
    </button>
    <!--
				CdxPopover uses the floating-ui library in a way that causes infinite recursion when
				mounted in JSDOM. Shallow rendering the component in turn fails if an anchor reference
				is provided, because vue-test-utils is unable to stringify the HTML element held within
				the ref. Work around the situation by using shallow rendering in tests and use a well-known
				window name to avoid passing the anchor in this case.
			-->
    <cdx-popover-stub
      closebuttonlabel="Close"
      icon="info-icon"
      open="false"
      placement="bottom-start"
      renderinplace="true"
      stackedactions="false"
      title="growthexperiments-mentor-dashboard-personalized-praise-info-headline"
      useclosebutton="true"
    />
  </div>
  <p>
    growthexperiments-mentor-dashboard-personalized-praise-metrics (1,14)
  </p>
  <div
    class="ext-growthExperiments-PersonalizedPraise-Settings"
  >
    <button
      aria-label="growthexperiments-mentor-dashboard-personalized-praise-settings-cog-icon-label"
      class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium cdx-button--icon-only ext-growthExperiments-PersonalizedPraise-Settings__cogicon"
    >
      
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            settings-icon
          </g>
        </svg>
      </span>
      
    </button>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div
    class="ext-growthExperiments-NoResults"
  >
    <div
      class="ext-growthExperiments-NoResults__image"
    />
    <p>
      {}
    </p>
  </div>
  <!--v-if-->
  <!--v-if-->
</section>
`;

exports[`PersonalizedPraise full data when has mentees 1`] = `
<section
  class="ext-growthExperiments-PersonalizedPraise"
>
  <div
    class="ext-growthExperiments-PersonalizedPraise__info-wrapper"
  >
    <p
      class="ext-growthExperiments-PersonalizedPraise__intro"
    >
      growthexperiments-mentor-dashboard-personalized-praise-intro
    </p>
    <cdx-toggle-button-stub
      aria-label="growthexperiments-mentor-dashboard-personalized-praise-info-icon-label"
      class="ext-growthExperiments-PersonalizedPraise__info-button"
      disabled="false"
      modelvalue="false"
      quiet="true"
    />
    <!--
				CdxPopover uses the floating-ui library in a way that causes infinite recursion when
				mounted in JSDOM. Shallow rendering the component in turn fails if an anchor reference
				is provided, because vue-test-utils is unable to stringify the HTML element held within
				the ref. Work around the situation by using shallow rendering in tests and use a well-known
				window name to avoid passing the anchor in this case.
			-->
    <cdx-popover-stub
      closebuttonlabel="Close"
      icon="info-icon"
      open="false"
      placement="bottom-start"
      renderinplace="true"
      stackedactions="false"
      title="growthexperiments-mentor-dashboard-personalized-praise-info-headline"
      useclosebutton="true"
    />
  </div>
  <p>
    growthexperiments-mentor-dashboard-personalized-praise-metrics (1,14)
  </p>
  <personalized-praise-settings-stub
    settingsdata="[object Object]"
  />
  <!--v-if-->
  <user-card-stub
    mentee="[object Object]"
  />
  <personalized-praise-pagination-stub
    currentpage="1"
    totalpages="1"
  />
</section>
`;
